--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,8 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <div style="text-align:center">
-  <mat-list role="list">
-    <mat-list-item role="listitem">Item 1</mat-list-item>
-    <mat-list-item role="listitem">Item 2</mat-list-item>
-    <mat-list-item role="listitem">Item 3</mat-list-item>
-  </mat-list>
   <mat-nav-list>
-    <a mat-list-item href={{product.name}} *ngFor="let product of menu.products"> {{ product.name }} </a>
+    <a mat-list-item routerLink='/detail/{{product.id}}' *ngFor="let product of menu.products"> {{ product.name }} </a>
   </mat-nav-list>
+  <router-outlet></router-outlet>
 </div>
 
