--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,7 @@
-<!--The content below is only a placeholder and can be replaced.-->
-<div style="text-align:center">
+<div class="container">
   <mat-nav-list>
-    <a mat-list-item routerLink='/detail/{{product.id}}' *ngFor="let product of menu.products"> {{ product.name }} </a>
+    <a mat-list-item (click)="select(product)" *ngFor="let product of menu.products"> {{ product.name }} </a>
   </mat-nav-list>
+  <app-details-modal *ngIf="selectedProduct" (dialogClosed)="onDialogClosed($event)" [product]="selectedProduct"></app-details-modal>
   <router-outlet></router-outlet>
 </div>
-
