--- a/src/app/details-modal/details-modal.component.css
+++ b/src/app/details-modal/details-modal.component.css
@@ -6,3 +6,33 @@
 /deep/.chocolate .mat-list-text {
   display: inline-block !important;
 }
+#back {
+  position: absolute;
+  z-index: 1000;
+  margin-left: 10px;
+  margin-top: 10px;
+}
+.center {
+  text-align: center;
+}
+.space-between {
+  flex: 1 1 auto;
+}
+.custom-divider {
+  color: rgba(0,0,0,.54);
+  background: rgba(0,0,0,.03); margin-left: -24px; margin-right:-24px; height:40px;line-height: 3;
+  font-weight: bold;
+  padding-left: 10px;
+}
+.price-grey {
+  margin-left: 5px; color: grey;
+}
+.checkout-icon {
+  position: absolute;
+  left: 8px;
+  top: 8px;
+}
+.cart-price {
+  position: absolute;
+  right: 8px;
+}
