gh-pages image fix

--- a/src/app/details-modal/details-modal.template.html
+++ b/src/app/details-modal/details-modal.template.html
@@ -5,7 +5,7 @@
 
   <!--CARD BEGINS-->
   <mat-card>
-    <img mat-card-image src="../../assets/img/coffee.jpg">
+    <img mat-card-image src="https://c1.staticflickr.com/4/3226/2359023467_7bb775a717.jpg">
     <div class="center">
       <mat-card-title>
         {{data.product.name}}
